2010-11-24  Jan Erik Hanssen  <jhanssen@sencha.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Html autofocus not working with QGraphicsWebView
        https://bugs.webkit.org/show_bug.cgi?id=43169

        QGraphicsScene does not propagate Qt::ActivateWindowFocusReason focus
        events when there are no active items.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::QGraphicsWebViewPrivate):
        (QGraphicsWebView::QGraphicsWebView):
        (QGraphicsWebView::eventFilter):
        (QGraphicsWebView::itemChange):
        * Api/qgraphicswebview.h:
        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
        (FocusPage::FocusPage):
        (FocusPage::event):
        (FocusPage::gotFocus):
        (tst_QGraphicsWebView::receivesFocusInOnShow):

Canonical link: https://commits.webkit.org/63111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72650 268f45cc-cd09-0410-ab3c-d52691b4dbfc